<resources>
    <string name="app_name">SafetyPongAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="ladder">Ladder</string>
    <string name="first_player">First Player</string>
    <string name="second_player">Second Player</string>
    <string name="no_name">No Name</string>
    <string name="first_player_score">first player score</string>
    <string name="second_player_score">second player score</string>
    <string name="login">Login</string>
    <string name="league_id">League ID</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="save">save</string>
    <string name="title_activity_league">LeagueActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="games">Games</string>
    <string name="updating_player_ratings">Updating Player Ratings</string>
    <string name="player_name">Player Name</string>
    <string name="rating">Rating</string>
    <string name="league_name">League Name</string>
    <string name="winner">WINNER</string>
    <string name="loser">LOSER</string>
    <string name="invite">Invite</string>
    <string name="league_link_title">You\'ve been invited to join %s</string>
    <string name="league_link_description">%s has invited you to join their Ping Pong ladder.</string>
</resources>
