<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:padding="16dp"
              android:orientation="vertical">

    <ImageView
        android:id="@+id/logged_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@android:color/holo_red_dark"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/league_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/league_id"/>

    <EditText
        android:id="@+id/league_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/login"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:text="@string/login"/>
</LinearLayout>