<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:minWidth="300dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <AutoCompleteTextView
            style="@style/ChallengeEditText"
            android:id="@+id/league_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/league_name"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <AutoCompleteTextView
            style="@style/ChallengeEditText"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="?attr/selectableItemBackground"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:layout_gravity="bottom|right"
        android:text="@string/save"/>
</LinearLayout>